# iati-graph-from-pg

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  blog.md  dbt_project.yml  docker-compose.yml  main.py  pyproject.toml  todo.md
.claude/: settings.local.json
.cursor/rules/: commit-as-you-work.mdc  how-to-interact-with-postgres-and-neo4j.mdc
docs/: autonomous_analysis_example.md  cursor-mcp.json  cursor_mcp_example.json  pacific_funding_summary_query.cypher  sample_queries.cql
graph/: db_utils.py  dbt_project.yml  load_activity_participation_edges.py  load_financial_edges.py  load_funds_edges.py  load_graph.py  load_graph_sequential.py  load_hierarchy_edges.py  load_participation_edges.py  load_phantom_activities.py  load_phantom_organisations.py  load_publication_edges.py  load_published_activities.py  load_published_organisations.py  packages.yml  wipe_neo4j.py
graph/macros/: drop_project_objects.sql
graph/models/: schema.yml  sources.yml
graph/models/edges/: activity_participation_summary_links.sql  financial_links.sql  funds_links.sql  hierarchy_links.sql  participation_links.sql
graph/models/nodes/: phantom_activities.sql  phantom_organisations.sql  published_activities.sql  published_organisations.sql
postgres-init/: init-db.sh
